--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 .App {
   text-align: left;
 }
@@ -24,6 +28,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+p.pclass {
+  line-height: 0.8;
 }
 
 @keyframes App-logo-spin {
